fix countdown spacing

--- a/src/layouts/child-fix.scss
+++ b/src/layouts/child-fix.scss
@@ -140,3 +140,7 @@
   cursor: inherit;
   display: block;
 }
+
+.banner .hero-banner .hero-block .time-block {
+  justify-content: center;
+}
